--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <section>
+    <section id="navigation">
       <!--Navigation-->
-      <nav class="w3-bar w3-blue">
+      <nav class="w3-bar w3-dark-gray">
         <a
           href="#"
           class="w3-bar-item w3-button"
@@ -28,9 +28,25 @@
 
     <section id="information">
       <!--Information-->
+      <h1>Ferien Villa Tranquil Escape</h1>
+      <p>
+        Willkommen bei "Tranquil Escape" – einer modernen Ferienvilla, die Ihnen
+        den ultimativen Rückzugsort bietet. Unser exquisit gestaltetes Haus
+        vereint luxuriöse Annehmlichkeiten mit einer idyllischen Umgebung und
+        lädt Sie ein, den Stress des Alltags hinter sich zu lassen. Mit
+        geräumigen und elegant eingerichteten Zimmern, einem atemberaubenden
+        Blick auf die umliegende Natur und einer Fülle von Annehmlichkeiten, die
+        Ihren Aufenthalt unvergesslich machen, ist "Tranquil Escape" der ideale
+        Ort, um Ruhe und Entspannung zu finden. Unsere Website bietet Ihnen eine
+        einfache Möglichkeit, Ihren Aufenthalt zu buchen. Füllen Sie einfach das
+        Buchungsformular aus, um Ihren nächsten Traumurlaub in unserer Villa zu
+        planen. Wir freuen uns darauf, Sie bei "Tranquil Escape" willkommen zu
+        heißen!
+      </p>
       <p>Dies ist das nötige Paragraphelement.</p>
 
-      <img src="img/foodprep.jpg" />
+      <img src="img/villa1.jpeg" />
+      <img src="img/villa2.jpeg" />
     </section>
 
     <section id="formular">
