--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <body>
     <section id="navigation">
       <!--Navigation-->
-      <nav class="w3-bar w3-dark-gray">
+      <nav class="w3-dark-gray w3-mobile w3-top">
         <a
           href="#"
-          class="w3-bar-item w3-button"
+          class="w3-bar-item w3-button w3-mobile w3-right"
           onclick="showSection('information')"
           >Information</a
         >
         <a
           href="#"
-          class="w3-bar-item w3-button"
+          class="w3-bar-item w3-button w3-mobile w3-right"
           onclick="showSection('formular')"
           >Formular</a
         >
@@ -28,7 +28,7 @@
 
     <section id="information">
       <!--Information-->
-      <h1>Ferien Villa Tranquil Escape</h1>
+      <h1 class="w3-center">Ferien Villa Tranquil Escape</h1>
       <p>
         Willkommen bei "Tranquil Escape" – einer modernen Ferienvilla, die Ihnen
         den ultimativen Rückzugsort bietet. Unser exquisit gestaltetes Haus
@@ -43,8 +43,6 @@
         planen. Wir freuen uns darauf, Sie bei "Tranquil Escape" willkommen zu
         heißen!
       </p>
-      <p>Dies ist das nötige Paragraphelement.</p>
-
       <img src="img/villa1.jpeg" />
       <img src="img/villa2.jpeg" />
     </section>
