--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>tbd</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tranquil Escape</title>
     <link rel="stylesheet" href="mystyle.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   </head>
 
   <body>
     <section id="navigation">
-      <!--Navigation-->
       <nav class="w3-dark-gray w3-mobile w3-top">
         <a
           href="#"
@@ -26,8 +26,7 @@
       </nav>
     </section>
 
-    <section id="information">
-      <!--Information-->
+    <section id="information" class="w3-container">
       <h1 class="w3-center">Ferien Villa Tranquil Escape</h1>
       <p>
         Willkommen bei "Tranquil Escape" – einer modernen Ferienvilla, die Ihnen
@@ -43,8 +42,23 @@
         planen. Wir freuen uns darauf, Sie bei "Tranquil Escape" willkommen zu
         heißen!
       </p>
-      <img src="img/villa1.jpeg" />
-      <img src="img/villa2.jpeg" />
+      <div class="w3-row w3-center">
+        <img
+          src="img/villa1.jpeg"
+          alt="villa1 picture"
+          class="w3-col m12 l4 villaImage w3-padding"
+        />
+        <img
+          src="img/villa2.jpeg"
+          alt="villa2 picture"
+          class="w3-col m12 l4 villaImage w3-padding"
+        />
+        <img
+          src="img/villa3.jpeg"
+          alt="villa3 picture"
+          class="w3-col m12 l4 villaImage w3-padding"
+        />
+      </div>
     </section>
 
     <section id="formular">
@@ -59,6 +73,9 @@
     terschiedlichen Inhalt (*) erwarten, den entsprechenden Labels und einer Sub- mit-Aktion.
     Die Submit-Aktion des Formulars muss das serverseitige Skript auf- rufen und die Inhalte
     aller Inputelemente an das Skript übermitteln.-->
+
+    <!-- Flexbox nutzen um es responsive zu gestaltent -->
+    <!-- so quality check symbole evt. von airbnb geklaut in einer flexbox darstellen -->
 
     <h2>test</h2>
     <p>hallo</p>
