--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         planen. Wir freuen uns darauf, Sie bei "Tranquil Escape" willkommen zu
         heißen!
       </p>
-      <div class="w3-row w3-center">
+      <div class="w3-row w3-center w3-margin">
         <img
           src="img/villa1.jpeg"
           alt="villa1 picture"
@@ -58,6 +58,13 @@
           alt="villa3 picture"
           class="w3-col m12 l4 villaImage w3-padding"
         />
+      </div>
+
+      <div id="infobox" class="w3-margin w3-panel w3-gray">
+        <img src="img/clean.png" alt="clean description" c />
+        <img src="img/security.png" alt="clean description " />
+        <img src="img/mountain.png" alt="clean description" />
+        <img src="img/fun.png" alt="clean description" />
       </div>
     </section>
 
